--- a/src/ShoppingCart/ShoppingCart.csproj
+++ b/src/ShoppingCart/ShoppingCart.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
         <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
+        <PackageReference Include="Polly" Version="7.1.0" />
     </ItemGroup>
 
 </Project>
